tests/fail/elaboration/unexpected-parameter/fun-literal.fathom
//~ exit-code = 1

fun A a b => a : fun (A : Type) -> A -> A
